(PC-23898)[PRO] fix: broken style

--- a/pro/src/components/Breadcrumb/Breadcrumb.module.scss
+++ b/pro/src/components/Breadcrumb/Breadcrumb.module.scss
@@ -8,7 +8,6 @@
 
   .bc-step {
     @include fonts.button;
-    width: auto;
 
     color: colors.$grey-medium;
     display: flex;
